--- a/src/components/feedback/wave/wave.css
+++ b/src/components/feedback/wave/wave.css
@@ -1,10 +1,10 @@
 .wave {
     --palette-background-bold: currentColor;
 
-    @apply align-middle inline-flex items-center pointer-events-none select-none
-    text-[var(--palette-background-bold)] whitespace-nowrap;
+    @apply align-middle inline-flex items-center leading-[var(--font-content-line-height-nano)]
+    pointer-events-none select-none text-[var(--palette-background-bold)] whitespace-nowrap;
 
-    font-size: var(--sizes-icon-tiny);
+    font-size: var(--font-content-size-nano);
 
     transition: color 0.2s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 
