--- a/src/components/navigation/menu/menu.css
+++ b/src/components/navigation/menu/menu.css
@@ -2,8 +2,15 @@
     --orientation-direction: column;
     --orientation-spacing: var(--spacing-y) 0 0 0;
 
+    --sizing-text-size: var(--document-font-size);
+    --sizing-text-line-height: var(--document-font-line-height);
+
     --spacing-x: var(--spacing-root-small);
     --spacing-y: var(--spacing-root-small);
+
+    @apply leading-[var(--sizing-text-line-height)];
+
+    font-size: var(--sizing-text-size);
 
     & ul {
         @apply flex items-stretch ml-0;
@@ -37,8 +44,8 @@
                 all: unset;
 
                 @apply bg-transparent cursor-pointer flex flex-grow gap-[var(--spacing-local-small)]
-                items-center !no-underline px-[var(--spacing-local-medium)] py-[var(--spacing-local-small)]
-                relative select-none whitespace-nowrap;
+                items-center leading-[inherit] !no-underline px-[var(--spacing-local-medium)]
+                py-[var(--spacing-local-small)] relative select-none whitespace-nowrap;
 
                 border-radius: var(--radius-medium);
 
